csharp/uwapi/interop.cs


        [StructLayout(LayoutKind.Sequential)]
        public struct UwPlayerComponent
        {
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 28)] public char[] name;
            public uint nameLength;
            public ulong steamUserId;
            public uint force;
            public float progress;
            public uint ping;
            public UwPlayerStateFlags state;
            public UwPlayerConnectionClassEnum playerConnectionClass;
        }

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool uwFetchPlayerComponent(IntPtr entity, ref UwPlayerComponent data);

        [Flags]
        public enum UwForceStateFlags
        {
            None = 0,
            Winner = 1 << 0,
            Defeated = 1 << 1,
            Disconnected = 1 << 2,
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct UwForceComponent
        {
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 3)] public float[] color;
            public ulong score;
            public uint killCount;
            public uint lossCount;
            public uint finishTimestamp;
            public uint team;
            public UwForceStateFlags state;
        }

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool uwFetchForceComponent(IntPtr entity, ref UwForceComponent data);

        [StructLayout(LayoutKind.Sequential)]
        public struct UwForceDetailsComponent
        {
            public ulong killValue;
            public ulong lossValue;
            public uint startingPosition;
        }

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool uwFetchForceDetailsComponent(IntPtr entity, ref UwForceDetailsComponent data);

        public enum UwForeignPolicyEnum
        {
            None = 0,
            Self = 1,
            Ally = 2,
            Neutral = 3,
            Enemy = 4,
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct UwForeignPolicyComponent
        {
            [MarshalAs(UnmanagedType.ByValArray, SizeConst = 2)] public uint[] forces;
            public UwForeignPolicyEnum policy;
        }

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool uwFetchForeignPolicyComponent(IntPtr entity, ref UwForeignPolicyComponent data);

        [StructLayout(LayoutKind.Sequential)]
        public struct UwDiplomacyProposalComponent
        {
            public uint offeror;
            public uint offeree;
            public UwForeignPolicyEnum proposal;
        }

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool uwFetchDiplomacyProposalComponent(IntPtr entity, ref UwDiplomacyProposalComponent data);

        public const uint UW_VERSION = 21;
        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwInitialize(uint version);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwDeinitialize();

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void UwExceptionCallbackType([MarshalAs(UnmanagedType.LPStr)] string message);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwSetExceptionCallback(UwExceptionCallbackType callback);

        public enum UwSeverityEnum
        {
            Note = 0,
            Hint = 1,
            Warning = 2,
            Info = 3,
            Error = 4,
            Critical = 5,
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct UwLogCallback
        {
            public IntPtr message;
            public IntPtr component;
            public UwSeverityEnum severity;
        }

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void UwLogCallbackType(ref UwLogCallback data);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwSetLogCallback(UwLogCallbackType callback);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwLog(UwSeverityEnum severity, [MarshalAs(UnmanagedType.LPStr)] string message);

        [StructLayout(LayoutKind.Sequential)]
        public struct UwAssistConfig
        {
            [MarshalAs(UnmanagedType.I1)] public bool logistics;
            [MarshalAs(UnmanagedType.I1)] public bool aiming;
            [MarshalAs(UnmanagedType.I1)] public bool fighting;
            [MarshalAs(UnmanagedType.I1)] public bool retaliations;
        }

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwSetAssistConfig(ref UwAssistConfig config);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwSetPlayerName([MarshalAs(UnmanagedType.LPStr)] string name);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwSetPlayerColor(float r, float g, float b);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwSetConnectStartGui([MarshalAs(UnmanagedType.I1)] bool enabled, [MarshalAs(UnmanagedType.LPStr)] string extraCmdParams);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwSetConnectAsObserver([MarshalAs(UnmanagedType.I1)] bool observer);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool uwConnectFindLan(ulong timeoutMicroseconds);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwConnectDirect([MarshalAs(UnmanagedType.LPStr)] string address, ushort port);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwConnectLobbyId(ulong lobbyId);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwConnectNewServer(uint visibility, [MarshalAs(UnmanagedType.LPStr)] string name, [MarshalAs(UnmanagedType.LPStr)] string extraCmdParams);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool uwTryReconnect();

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwDisconnect();

        public enum UwConnectionStateEnum
        {
            None = 0,
            Connecting = 1,
            Connected = 2,
            Disconnecting = 3,
            Error = 4,
        }

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void UwConnectionStateCallbackType(UwConnectionStateEnum state);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwSetConnectionStateCallback(UwConnectionStateCallbackType callback);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern UwConnectionStateEnum uwConnectionState();

        public enum UwGameStateEnum
        {
            None = 0,
            Session = 1,
            Preparation = 2,
            Game = 3,
            Finish = 4,
        }

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void UwGameStateCallbackType(UwGameStateEnum state);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwSetGameStateCallback(UwGameStateCallbackType callback);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern UwGameStateEnum uwGameState();

        public enum UwMapStateEnum
        {
            None = 0,
            Downloading = 1,
            Loading = 2,
            Loaded = 3,
            Unloading = 4,
            Error = 5,
        }

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void UwMapStateCallbackType(UwMapStateEnum state);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwSetMapStateCallback(UwMapStateCallbackType callback);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern UwMapStateEnum uwMapState();

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void UwUpdateCallbackType(uint tick, [MarshalAs(UnmanagedType.I1)] bool stepping);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwSetUpdateCallback(UwUpdateCallbackType callback);

        [StructLayout(LayoutKind.Sequential)]
        public struct UwShootingUnit
        {
            public uint position;
            public uint force;
            public uint prototype;
            public uint id;
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct UwShootingData
        {
            public UwShootingUnit shooter;
            public UwShootingUnit target;
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct UwShootingArray
        {
            public IntPtr data;
            public uint count;
        }

        [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
        public delegate void UwShootingCallbackType(ref UwShootingArray data);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwSetShootingCallback(UwShootingCallbackType callback);

        [StructLayout(LayoutKind.Sequential)]
        public struct UwMyPlayer
        {
            public uint playerEntityId;
            public uint forceEntityId;
            [MarshalAs(UnmanagedType.I1)] public bool primaryController;
            [MarshalAs(UnmanagedType.I1)] public bool admin;
        }

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool uwMyPlayer(ref UwMyPlayer data);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void uwModifiedEntities(ref UwIds data);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool uwTestConstructionPlacement(uint constructionPrototype, uint position);

        [DllImport(LibName, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint uwFindConstructionPlacement(uint constructionPrototype, uint position);

        public enum UwOrderTypeEnum
        {
            None = 0,
            Stop = 1,
            Guard = 2,
            Run = 3,
            Fight = 4,
            Load = 5,
            Unload = 6,
            SelfDestruct = 7,
        }

        [Flags]
        public enum UwOrderPriorityFlags
        {
            None = 0,
            Assistant = 1 << 0,
            User = 1 << 1,
            Enqueue = 1 << 2,
            Repeat = 1 << 3,
        }

        [StructLayout(LayoutKind.Sequential)]
        public struct UwOrder
        {
            public uint entity;
            public uint position;
            public UwOrderTypeEnum order;
            public UwOrderPriorityFlags priority;
        }
